--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
 
 .container {
   max-width: 1280px;
-  padding: 0; 
+  padding: 0 15px;
   margin: 0 auto;
+  outline: 1px solid green;
 }
 
 html {
@@ -53,7 +54,6 @@ p {
 }
 
 h2 {
-  margin-bottom: 0;
   font-family: Montserrat Alternates;
   text-align: center;
   font-style: normal;
@@ -64,19 +64,19 @@ h2 {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
 }
 
-/* img {
+img {
   display: block;
   max-width: 100%;
   height: auto;
-} */
-/* 
+}
+
 button {
   outline: none;
   border: none;
   background-color: transparent;
   transition: opacity 0.3s ease;
   cursor: pointer;
-} */
+}
 
 input[type="text"],
 input[type="tel"],
@@ -93,7 +93,6 @@ textarea {
   padding: 15px;
   border-radius: 5px;
 }
- 
 
 .visually-hidden {
   position: absolute;
@@ -125,10 +124,11 @@ textarea {
 .features .list__item {
   display: flex;
   flex-direction: column;
+  align-items: center;
   text-align: center;
   width: calc(100% / 4 - 20px);
-  margin: 2%;
-
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .list_routs {
@@ -137,28 +137,112 @@ textarea {
 }
 
 .list_routs .list__item {
-  margin-right: 30px;
+  width: calc(100% / 3 - 30px);
+  margin-left: 15px;
+  margin-right: 15px;
   margin-bottom: 40px;
 }
-
-.list_routs .list__item:nth-child(3n+3) {
-  margin-right: 0;
-}
-
-.routs__img {
-  max-width: 400px;
-  height: 300px;
-  border-radius: 20px;
-  }
 
 .routs__img:nth-child(3n+1) {
   margin-right: 0;
 }
 
-/* FOOTER */
+/* HEADER */
+.container_header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
+.header-contact-menu {
+  display: flex;
+  align-items: center;
+}
+
+.messangers_header {
+  display: flex;
+}
+
+.messangers_header .messengers__item {
+  width: 30px;
+  height: 30px;
+  margin-right: 27px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.messengers__item_whatsapp {
+  background-image: url(./img/icons/contacts/icon-whatsapp.svg);
+}
+
+.messengers__item_viber {
+  background-image: url(./img/icons/contacts/icon-viber.svg);
+}
+
+.messengers__item_telegram {
+  background-image: url(./img/icons/contacts/icon-telegram.svg);
+}
+
+.phones_header {
+  font-size: 14px;
+  margin-left: 130px;
+}
+
+.phones_header .phones__item:first-child {
+  margin-right: 20px;
+}
+
+.nav {
+  margin-left: 60px;
+}
+
+.hamb {
+  position: relative;
+  width: 40px;
+  height: 27px;
+  padding: 0;
+
+}
+
+.hamb__line {
+  display: block;
+  width: 100%;
+  height: 5px;
+  background-color: #19017A;
+  border-radius: 4px;
+}
+
+.hamb__line:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 5px;
+  background-color: #19017A;
+  border-radius: 4px;
+}
+
+.hamb__line:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 5px;
+  background-color: #19017A;
+  border-radius: 4px;
+}
+
+.main-menu {
+  display: none;
+}
+/* HEADER END */
+
+/* FOOTER */
 .footer-page {
-  box-shadow: 0 0 5px red;
   text-align: center;
   background: linear-gradient(
     180deg,
@@ -199,9 +283,6 @@ textarea {
   flex-direction: column;
   margin-bottom: 71px;
   margin-top: 50px;
-}
-
-.phones__item {
   font-size: 22px;
   line-height: 32px;
   font-weight: 600;
@@ -229,3 +310,4 @@ textarea {
   font-size: 32px;
   line-height: 42px;
 }
+/* FOOTER END */
