--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
 :root {
   --titles: #19017a;
   --text: #27323a;
+  --green: #016f19;
 }
 
 body {
@@ -104,7 +105,7 @@ textarea {
   border: 0;
   clip: rect(0 0 0 0);
   overflow: hidden;
-} 
+}
 
 /* HEADER */
 .container_header {
@@ -166,7 +167,7 @@ textarea {
   display: block;
   width: 100%;
   height: 5px;
-  background-color: #19017A;
+  background-color: #19017a;
   border-radius: 4px;
 }
 
@@ -178,7 +179,7 @@ textarea {
   display: block;
   width: 100%;
   height: 5px;
-  background-color: #19017A;
+  background-color: #19017a;
   border-radius: 4px;
 }
 
@@ -190,7 +191,7 @@ textarea {
   display: block;
   width: 100%;
   height: 5px;
-  background-color: #19017A;
+  background-color: #19017a;
   border-radius: 4px;
 }
 
@@ -205,8 +206,8 @@ textarea {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 32px;  
-  color: #19017A;
+  font-size: 32px;
+  color: #19017a;
   font-weight: bold;
   margin-bottom: 90px;
 }
@@ -303,7 +304,7 @@ textarea {
 .routs__title {
   position: relative;
   font-size: 28px;
-  color:#FFB015;
+  color: #ffb015;
   z-index: 1;
 }
 
@@ -312,14 +313,91 @@ textarea {
   min-width: 200px;
   padding: 15px 50px;
   background-color: #ffffff;
-  color: #016F19;
-  border: 2px solid #016F19;
+  color: var(--green);
+  border: 2px solid var(--green);
   border-radius: 20px;
   z-index: 1;
 }
 
-
 /* BODY END */
+
+/* PAGE-BOOKING */
+
+.container_form {
+  width: 1094px;
+  margin: auto;
+}
+
+.form_title {
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 42px;
+  letter-spacing: 0.01em;
+  color: var(--titles);
+}
+
+.form-booking {
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  border-radius: 20px;
+}
+
+.input {
+  background: #f2f2f2;
+  border: 1px solid #bdbdbd;
+  box-sizing: border-box;
+  margin-bottom: 18px;
+  margin-top: 10px;
+}
+
+.label span {
+  color: #bdbdbd;
+  font-weight: bold;
+  line-height: 20px;
+  max-width: 100%;
+}
+
+.field-group {
+  display: flex;
+  max-width: calc(100% / 2 - 30px);
+}
+
+textarea {
+  margin-top: 10px;
+}
+
+.radio {
+  display: flex;
+}
+
+.radio-group {
+  display: flex;
+  flex-direction: column;
+  width: calc(100vw/2 - 20px);
+  border: 1px solid red;
+}
+
+.order-btn {
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+  padding: 10px 15px;
+  color: var(--green);
+  border: 2px solid var(--green);
+
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.01em;
+
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
+}
 
 /* FOOTER */
 .footer-page {
@@ -336,7 +414,8 @@ textarea {
   color: var(--text);
 }
 
-.footer-page h3, .email-footer {
+.footer-page h3,
+.email-footer {
   font-size: 26px;
   line-height: 36px;
   font-weight: normal;
